--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -115,98 +115,25 @@ In each section if there are multiple aspects of that then put into headings  - 
 Examine overlap of the cultural uses of GDP, and the next chapter - hand in hand here get an overview of what needs to extracted from the data and where it sits
 
 Also work out what to move to Lit Review - and restructure LT and Methodology based on two chapters near completion. -->
+### Word count
 
+- Actual (Target)
+- Intro - 800 - (500)
+- Vignette + Commentary - 600 (1000)
+- Cultural - 2500 (2500)
+- Guided Part - 5,800 (2500)
+- Personal - 500 (750)
+- DISCUSSION - 1700 (1500)
+- Conclusion- 400 (500)
 
-## Chapter outline
+500+1000+2500+2500+750+1500+500 = 9250
+
+## Introduction
 
 In the last chapter I outlined use of tools focusing on emerging tensions in activity on a micro-level. Guided by Rogoff's concept of guided participation, this chapter analyses this emergent activity at a scope between concrete tool use and the wider cultural context of the game making community. I focus on the implementation of individual game design patterns (GDPs) and in doing so addresses how data gathered informs thinking on the research question - _how can game design patterns support the development of coding practices by novices_?
 
 This chapter begins with re-examining of game play design patterns as a unit of analysis for this research. Following this a vignette of parent child interaction in game making process helps contextualise findings. The chapter then undertakes a systematic analysis of varied uses of game design patterns by participants drawing on detailed observations of practice in recorded video data. A discussion section explores implications and observations from these findings in relation to existing research and concepts. As part of this discussion, I draw on the examples of use of game design patterns in practice to explore the analysis of GDPs as a mid-level construct, of use both to educational designers and researchers.
--   [The Use of Gameplay Design Patterns "It's like a project in itself,
-    really"](#the-use-of-gameplay-design-patterns-its-like-a-project-in-itself-really)
-    -   [Research Questions - March
-        2024](#research-questions---march-2024)
-    -   [Chapter outline](#chapter-outline)
-    -   [Study of Vignette 2](#study-of-vignette-2)
-        -   [Descriptive Commentary on Vignette
-            2](#descriptive-commentary-on-vignette-2)
-    -   [Cultural Dimension](#cultural-dimension)
-        -   [The role of GDPs to facilitate learners to design for
-            others](#the-role-of-gdps-to-facilitate-learners-to-design-for-others)
-        -   [GDP concepts and language used in informal feedback for
-            peers to influence modification of games (developing
-            community norms) - MERGE WITH
-            BELOW?](#gdp-concepts-and-language-used-in-informal-feedback-for-peers-to-influence-modification-of-games-developing-community-norms---merge-with-below)
-        -   [Evolution and propagation of GDPs concepts during
-            playtesting - MERGE WITH
-            ABOVE?](#evolution-and-propagation-of-gdps-concepts-during-playtesting---merge-with-above)
-        -   [GDPs facilitate the use of wider funds of knowledge /
-            interest](#gdps-facilitate-the-use-of-wider-funds-of-knowledge-interest)
-        -   [Perhaps add here a summary of cultural section if
-            useful](#perhaps-add-here-a-summary-of-cultural-section-if-useful)
-    -   [GDPs used in the process of guided
-        participation](#gdps-used-in-the-process-of-guided-participation)
-        -   [GDPs and their grouping as a collection or menu of
-            suggested options, offer the potential to assist project
-            navigation, acting as a framework for code examples and
-            step-by-step
-            tutorials](#gdps-and-their-grouping-as-a-collection-or-menu-of-suggested-options-offer-the-potential-to-assist-project-navigation-acting-as-a-framework-for-code-examples-and-step-by-step-tutorials)
-        -   [GDPs used to scaffold ideation
-            processes](#gdps-used-to-scaffold-ideation-processes)
-            -   [Knowledge of game design patterns used to stimulate and
-                communicate new
-                ideas](#knowledge-of-game-design-patterns-used-to-stimulate-and-communicate-new-ideas)
-            -   [The use of GDPs to encourage intuitive and visual
-                prototyping](#the-use-of-gdps-to-encourage-intuitive-and-visual-prototyping)
-            -   [GDPs as used by participants in their prioritisation in
-                the ideation
-                process](#gdps-as-used-by-participants-in-their-prioritisation-in-the-ideation-process)
-        -   [GDPs aiding the process of division of
-            labour](#gdps-aiding-the-process-of-division-of-labour)
-            -   [Working knowledge of different types of GDPs can help
-                participants to divide project elements by
-                pattern](#working-knowledge-of-different-types-of-gdps-can-help-participants-to-divide-project-elements-by-pattern)
-            -   [Structuring work processes through implementing modular
-                sub-projects in the form of GDPs can aid division of
-                labour](#structuring-work-processes-through-implementing-modular-sub-projects-in-the-form-of-gdps-can-aid-division-of-labour)
-            -   [Other notable observations concerning division of
-                labour in the video
-                data](#other-notable-observations-concerning-division-of-labour-in-the-video-data)
-        -   [The role of GDP used in emerging technical
-            processes](#the-role-of-gdp-used-in-emerging-technical-processes)
-            -   [Use of GDPs to facilitate use of
-                tools](#use-of-gdps-to-facilitate-use-of-tools)
-            -   [Diverse use of technical processes driven by
-                GDPs](#diverse-use-of-technical-processes-driven-by-gdps)
-            -   [Use of GDPs in the development of shared
-                language](#use-of-gdps-in-the-development-of-shared-language)
-            -   [Code Patching as a guided
-                process](#code-patching-as-a-guided-process)
-            -   [GDPs used to nurture tactical responses to coding
-                errors](#gdps-used-to-nurture-tactical-responses-to-coding-errors)
-            -   [Concluding remarks on debugging and
-                revision](#concluding-remarks-on-debugging-and-revision)
-    -   [The role of GDPs in the personal appropriation of concepts and
-        processes](#the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes)
-    -   [Discussion](#discussion)
-        -   [Concrete and relatable levels of abstraction - linking this
-            communities experiences with existing
-            literature](#concrete-and-relatable-levels-of-abstraction---linking-this-communities-experiences-with-existing-literature)
-        -   [Design patterns as a intermediate-level, pedagogical
-            framework](#design-patterns-as-a-intermediate-level-pedagogical-framework)
-        -   [Implications and beginnings of suggestions for
-            practitioners - IS THIS FOR THE CONCLUSION? OR MERGE SOME
-            UP - WITHIN THE SECTION THAT THEY REFER
-            TO?](#implications-and-beginnings-of-suggestions-for-practitioners---is-this-for-the-conclusion-or-merge-some-up---within-the-section-that-they-refer-to)
-            -   [Tensions between facilitating agency and norming
-                practices - MOVE up OR COMPRESS INTO THIS CHAPTER - OR
-                AS A LINK TO NEXT CHAPTER IN CONCLUSION
-                ?](#tensions-between-facilitating-agency-and-norming-practices---move-up-or-compress-into-this-chapter---or-as-a-link-to-next-chapter-in-conclusion)
-    -   [Chapter Conclusion](#chapter-conclusion)
-        -   [Simple table of uses](#simple-table-of-uses)
-        -   [Summary of the pedagogical opportunities of Game Design
-            Patterns](#summary-of-the-pedagogical-opportunities-of-game-design-patterns)
-        -   [Transition to next chapter](#transition-to-next-chapter)
+
 <!-- This chapter builds towards a Matrix that could be included in a concluding chapter.
 https://docs.google.com/document/d/1DRgpgIUfq5XIktYy-lX4WlviUDnffNc0v8SOeLGgHho/edit
 
@@ -616,21 +543,23 @@ These new patterns or elements of patterns sometime introduced new concepts and 
 While the use of some concepts can be seen as intentional affordance of the introduced design, some appear as a product of participants' funds of home knowledge. The concept of safe zone here has been transferred from the cultural experience of one participant in game playing into this community of game makers.
 
 
-
-
-
 ### Perhaps  add here a summary of cultural section if useful
 
 The link to home interests and funds of knowledge is demonstrated in varied ways which enrich the development of a community idioculture which is inclusive and productive in terms of the practicalities of learning how to make games.
 
 The work of Rogoff and Wegner and Lave has guided the surfacing activity in the  such as legitimate peripheral participation, community norming and taking on roles of specialism.  
 
-<!-- At times, the distinction between cultural and guided activity is blurred but here the role of playtesting as a medium for cultural exchange and a ground in which culture grows in of note. -->
+At times, activity crosses between cultural and pair guided processes  - DEVELOP HOW
+- the role of playtesting as a medium for cultural exchange and a ground in which culture grows in of note
+- individual requests and implementations can spread via playtesting
+- the immediacy of designing for other is used by parents or children to norm behaviour in inter-personal interactions.  
 
-The varied use of the collection and individuals gameplay patterns and concepts, can be examined using the lense of the MDA framework.  
+IS THIS REALLY CULTURAL ? - IF SO HOW - OR CHANGE THE FRAMING
+Linking to wider cultural activity beyond this learning intervention, the analysis of this chapter highlights dimension of the use of GDPs on a cultural level that also exist in formal analysis of game design frameworks [Salen, and MDA].
+The varied use of the collection and individuals gameplay patterns and concepts, can be examined using the lenses of the MDA framework.  
 - Home knowledge of mechanics drove many of the requests for GDPs from popular medium of retro games  
 - The norming practices often focus on the game feel, which relates most directly to the dynamics lens.  
-- Aesthetics and the end user experience motivated some users greatly, while it is not clear if this game code changes in this dimentions fully constitue a gameplay design pattern, they are an important inclusive element of the design.
+- Aesthetics and the end user experience motivated some users greatly, while it is not clear if this game code changes in this dimensions fully constitute a gameplay design pattern, they are an important inclusive element of the design.
 
 
 The cultural aspects of the learning community are further explored in Chapter 7.
@@ -717,7 +646,7 @@ However, to overcome scarcity of facilitator support, direct help processes were
 This section prioritises describing the code patching process using examples and guided instructions rather than the first principles.   -->
 
 
-### GDPs used to scaffold ideation processes
+### GDPs used to scaffold ideation processes (800)
 
 **GDPs are used in a variety of ways to guide the ideation process via restriction of choice in pattern collection, starting template includes core dynamics, visual code structures of GDPs suit rapid prototyping.**
 
@@ -745,8 +674,6 @@ Dave invites thinking outside of the constraints of the suggested design early i
 The following exchange shows how the use of GDPs help participants navigate the professional practice of forking a codebase and the exploration of developer resources. Technically, he has the courage to divert from the existing game paradigm from platform to maze. Practically it brings up issues as many of the dominant game design patterns are different. Thus the first one they identify that of enemy following is not present in the current menu of choices.
 
 THIS IS  LINKED WITH discuSSION - PERHAPS MOVE THERE.
-
-
 
 Toby adopts with this suggestion readily once he understands Da's suggestion. He then approaches Mick with a suggestion.
 
@@ -857,69 +784,15 @@ The use of GDPs to scaffold the ideation process was a common pattern used by X 
 
 
 
-#### GDPs as used by participants in their prioritisation in the ideation process
 
-**GDPs are mentioned by name and via verbal and physical descriptions as a lingua franca and as shortcuts by participants when prioritising work**
-
-<!-- informal task division -->
-The following exchange between participants Ed and Mark  shows GDPs being used to try to organise future activity.
-<!-- Online version as table - https://docs.google.com/document/d/1wLx8j9djYqJdZHwKJ09mmIDMYO7YqlMDhuHx2hiqpJI/edit -->
-
-At this stage of their process, some of these patterns have been discussed and sketched out some started but only partially completed. For example, the child has designed different frames of animation but this has not been exported to the right format or implemented in code form. This interchange shows a tension between a more chaotic style of working jumping from one goal to another and a parental motivation to prioritise one work to be done. This tension is outlined when a parent Mark gives an update on progress. "So, we’ve made quite a lot of progress this week. I think the issue we’re having is that Fi’s super excited so we’re kind of jumping from one thing to another and that’s kinda overwhelming me a bit." An earlier interaction illustrates this dynamic clearly.
-
-    Mark: I’ve brought the music, and also we could just concentrate on one thing and just change that. You know, keep working through.
-    Ed: Yeah. I think I want to get an enemy in - oh no - my person animated.
-    Mark: So you want to get your person animated that’s the main thing.
-    Mark: Shall we concentrate on that and changing the platforms into something different?
-<!-- Ed: Yeah.
-Mark: Yeah?
-Ed: I also want to make a theme tune.
-Mark: Yeah. It’s, that’s what I mean, you can’t just skip around like that.
-Ed: Hmmm.
-Mark: Just cos it gets really overwhelming.
-Mark: Yeah..? So…?
-Long pause.
-Mark: Well I’ll have a look at the code and see if I can make sense of that. -->
-
-The child's initial listing of features is a brainstorming technique. Such techniques are used to aid a creative process. This example shows the use of the approximate names of a number of game design patterns by the child adult. These are _get the person animated_, _get an enemy in_, _changing the platforms into something different_, _make a theme tune_. However while this use of terms shows the promise of the use use of GDPs as conceptual short cuts to aid planning and  prioritisation, the process is still not unproblematic. The parent seems to lack a process to map these out and then to work together to prioritise them.  Instead he appears to be keen to quickly pick one.  His suggested process is to then work through the documentation on that pattern. Ed appears reluctant to both work on adapt a the working process suggested by his father. Hence, the next section continues to explore this interaction in an exploration of the division of labour between participants.
-
-
-<!-- Patterns and the multiple actions and operations they entail are referred to briefly using short cut names.   -->
-
-
-<!-- Discussion later or before??? Maps -
-GDP are already being used as a way to set goals, track progress and prioritise but the process seems stressful or unsatisfactory. Some kind of support help scaffold this process would be potentially productive. Changes to the emerging 3M design to provide such support are explored in the following chapter. -->
-
-
-<!--
-We can compare this drawn out process with a more rapid prioritisation guided by a parent with more experience in software development. Toby and Dave  are discussing possible features early in the process if ideation.
-
-They thinking of a feature – wrap around like Pac-man
-Dave  – Yeah we can do that. Save that for version 1.1
--->
-
-<!-- This pattern completion is mirrored in the work of other pairs. Thus replicating is a kind of participation in an emerging community.
-There is also a link made by the parent to previous working practices. Using a paper book to make a sketch of the work to be completed. -->
-<!-- These kinds of shifts of activity and cultural practices brought by the participants also feed into the ongoing culture of the game making community. For example the use of paper designs and paper prototyping that for some of the home ed families was a familiar practice was something that I adopted more broadly after observing the families involved. -->
-
-<!--
-NOTE - IS THIS ALREADY COVERED IN PREVIOUS CHAPTER - COMPLEX DESIGN PROCESSES? ()
-
-- Well suited to build a repeated design practice.
-- Especially with starting documents,
-- Small changes had big effects.
-- Variable changes needed immediate testing.
-
-While the design suits repeated design practice as illustrated by the example above, not all pairs or individuals interacted with GDP in such a neat way.
-
-A later discussion section in this chapter illustrates a more complex interaction with design stages. -->
-
-
-
-### GDPs aiding the process of division of labour
+### GDPs aiding the process of organisation and division of labour (2000)
 
 <!-- NOTE - DIVISION OF LABOUR IS IN THE NEXT CHAPTER TOO - REWRITE BASED ON GDP ONLY CONTENT
 CHECK FOR OVERLAP-->
+
+
+GDPs are referenced as an way of prioritising work and organising it via division on labour.
+BRIEF SUMMARY OF SECTION.
 
 **Participants worked mostly as pairs or individuals, alternating between community playtesting and pair/individual design work. Participants split work between them and resolve problems. GDPs feature in processes of division of labour in a variety of ways.**
 
@@ -928,7 +801,33 @@ CHECK FOR OVERLAP-->
 
 The implementation of some GDP involved the use of different tools and activities. As learners build the familiarity with the component actions needed to implement design patterns, some start to specialise as they divide labour between pairs or peers.
 
-In the last section, Mark and Ed used GDPs to attempt to prioritise work. However, following this Mark is engaged puzzling over documentation on how to add animation to a character for some time. This results in Ed being blocked from progressing. In the next exchange, they progress to more successfully divide their labour informally.
+**GDPs are used a lingua franca and as shortcuts by participants when organising and prioritising work**
+
+<!-- NOTE mentioned by name and via verbal and physical descriptions as -->
+
+<!-- Online version as table - https://docs.google.com/document/d/1wLx8j9djYqJdZHwKJ09mmIDMYO7YqlMDhuHx2hiqpJI/edit -->
+
+GDPs were used to try to organise and prioritise game making activity. An exchange between participants Ed and Mark shows a tension between a more chaotic style of working jumping from one goal to another and a parental motivation to prioritise one work to be done.
+
+    Mark: I’ve brought the music, and also we could just concentrate on one thing and just change that. You know, keep working through.
+    Ed: Yeah. I think I want to get an enemy in - oh no - my person animated.
+    Mark: So you want to get your person animated that’s the main thing.
+    Mark: Shall we concentrate on that and changing the platforms into something different?
+
+
+The pair's initial listing of features is a brainstorming technique aid a creative process, in this case use of the approximate names of of game design patterns (_get the person animated_, _get an enemy in_, _changing the platforms_, _make a theme tune_). The vignette analysis seed the parent overwhelmed with perhaps due to a a lack a process to map these out and then to work together to prioritise them.  He appears to be keen to quickly pick one pattern, then then work through the documentation on that pattern, a process he later refers to in interview data a plodding.
+
+    Ed: Yeah.
+    Mark: Yeah?
+    Ed: I also want to make a theme tune.
+    Mark: Yeah. It’s, that’s what I mean, you can’t just skip around like that.
+    Ed: Hmmm.
+    Mark: Just cos it gets really overwhelming.
+    Mark: Yeah..? So…?
+    Long pause.
+    Mark: Well I’ll have a look at the code and see if I can make sense of that.
+
+At a different stage Mark is engaged puzzling over documentation on how to add animation to a character for some time. This results in Ed being blocked from progressing. In the following exchange, the child proposes dividing their labour informally.
 
     Mark: Quite complicated. But we can do it. But it would mean a lot of mucking around
     Ed: Ah Er
@@ -943,22 +842,23 @@ In the last section, Mark and Ed used GDPs to attempt to prioritise work. Howeve
     Ed: Um making a sound track or something. I could do something like that.
     Mark: Ok. Yeah. I’ll see if there’s any more computers in the cupboard.
 
-<!--
-THIS DOESN'T SEEM RIGHT
-Or perhaps the parent steers the child into graphical areas as they are able to continue without stressing out the parent. Thus the child's
-compliance may be a kind or pragmatic decision to allow smoother progress. -->
 
-The father describes previous behaviour which showed issues involving
-prioritisation as 'skipping around like that' or 'jumping all over the place' as 'overwhelming'. The child does not respond to this suggestion to focus on one GDP, suggests a different option. He suggests splitting and using one laptop each. He names one of the other pattern. The child continues to work on parallel patterns or component actions of pattern using tools and processes which he is more familiar with. This child also begins researching other toolsets, in this session, research to identify an online tool to create an short audio soundtrack. This serves the child as it allows them to avoid waiting for their father and moving different parts of the overall project forward.
+The father describes previous behaviour which showed issues involving prioritisation as 'skipping around like that' or 'jumping all over the place' as 'overwhelming'.
 
-The familiarity with GDPs facilitates  the young person to direct an informal division on labour. (HOW EXACTLY?)
-The child appears to make a tactical decision allowing the father to specialise in GDPs that involve deciphering technical instructions, whilst he engages with a pattern that involves creating assets in non-code / GUI environments.
+<!-- The child does not respond to this suggestion to focus on one GDP, suggests a different option. He suggests splitting and using one laptop each. He names one of the other pattern. The child continues to work on parallel patterns or component actions of pattern using tools and processes which he is more familiar with. -->
+
+At this stage, the child appears to make a tactical decision allowing the father to specialise in GDPs that involve deciphering technical instructions, whilst he engages with a pattern that involves creating assets in non-code / GUI environments.
+
+The use of GDPs concepts here is used in the young person's circumvention of a tension via his informal division on labour. Specifically they are able to avoid waiting for their father and moving different parts of the overall project forward.
+
+<!-- This child also begins researching other toolsets, in this session, research to identify an online tool to create an short audio soundtrack.  -->
+
 
 #### Structuring work processes through implementing modular sub-projects in the form of GDPs can aid division of labour
 
-Structuring code implementation on relatively small code stages of GDP implementation steers the production process towards relatively frequent iterations of design cycle. Specifically the design stages here typically involve; ideation, planning, implementation, testing and modification and sharing via playtesting.
+<!-- Structuring code implementation on relatively small code stages of GDP implementation steers the production process towards relatively frequent iterations of design cycle. Specifically the design stages here typically involve; ideation, planning, implementation, testing and modification and sharing via playtesting. THIS IS EXPLORED IN THE NEXT CHAPTER SO DROP OR ONLY BRIEFLY REFERENCE. -->
 
-Sh and Olivia relied on the parent to do the majority of code implementation and shared one computer. The opening vignette shows the child use the name of a GDP as a way to communicate about the shared work of making a game.
+Sh and Olivia relied on the parent to do the majority of code implementation and shared one computer. Vignette 1 shows the child use the name of a GDP as a way to communicate about the shared work of making a game.
 
      Olivia: Go on then. Key - Door - Person.
      Suzanna: Person?
@@ -970,7 +870,6 @@ The utterance by the child "Key Door Person"  work on the game design pattern ca
     "Olivia got on better during the coding once the student who was hovering initially left us alone. Because every time Olivia hesitated, she jumped in to do it for her. Whereas I know her better so can judge how to facilitate more minimally, and I resist the urge to fix things immediately when she struggles.  Plus she can't read yet, so she was recognising the relevant bits of code by matching the individual letters, which takes longer."
 
 The parent outlines her strategies used to address lack of reading ability as a barrier to participation. The design choice of a grid of letters representing different elements of the platform game appears appropriate in the case of a novice learning to code and read at the same time.  After the child has delegated a coding task to her mother she undertakes other activities. At times her activities directly contribute to the main goal of game making. At times the parent asked the child to seek help from facilitator. On another occasion when the child appeared bored of waiting for parent to solve a code problem, she approached the facilitator to ask for help on behalf of the adult without prompting. At other times she engages more peripheral activities such as watching older children playtest each others games, or observing community activity from under the table.
-
 
 Analysis of video data uncovered flexible way in which the participant divided the process of game making. While these processes were emergent in that they were not in by the facilitator, they show traces of home collaboration practices. For example, Suzanna and Olivia alternated between use of keyboard and mouse to give the child hands on experience when possible. In interview data the parent note "I resist the urge to fix things immediately when she struggles." The parent driving seat to overcome code blockages then allowed the child to input their design choices when more complicated work is complete.
 
@@ -1107,6 +1006,7 @@ THERE IS CROSS OVER HERE WITH CHAPTER 4 - ACTION TO OPERATION - WHAT DOES THIS A
 We can see that the process of changing pen colours on the graphical tool is one which the child has been able to translate into a effortless process whereas the parent is still consciously building her competency. Nadine has operationalised the process and it becomes part of the toolset of practices that she can draw on [CITE]. Molly also benefits, the expertise of her child to undertake that process is added to her distributed toolset. However, she is also keen to develop her own competency as indicated by her asking child to explain the process.
 
 #### Diverse use of technical processes driven by GDPs
+
 MOVED SO EDIT DOWN  
 References to such emerging practices driven by GDPs were present in many exchanges during directed playtesting and pair interactions.
 
@@ -1355,8 +1255,6 @@ I also explore GDPS as a mediational strategy using AT concepts.
 
 ### Concrete and relatable levels of abstraction - linking this communities experiences with existing literature
 
-
-
 The process of identifying and working with GDPs in this research process can be mapped as a dialectical process of moving (rising) to the concrete [@sannino_activity_2011].
 
 In this study, experience of the features and behaviour of game are concrete. The concept of design pattern that can be applied to more than one game is more abstract. And more abstract still are computing concepts like abstraction and pattern recognition which are present in the game code and problem solving processes.
@@ -1432,7 +1330,7 @@ There are challenges of the use of these short cuts and at a more general the de
 
 
 
-### Implications and beginnings of suggestions for practitioners  - IS THIS FOR THE CONCLUSION? OR MERGE SOME UP - WITHIN THE SECTION THAT THEY REFER TO?
+### Implications and beginnings of suggestions for practitioners  -
 
 
 NOTE - SUPPORT NEEDED FOR SOME OF THE BELOW - AND MORE DISCUSSION NEEDED ON CHALLENGE IN GENERAL
@@ -1646,3 +1544,23 @@ Thus in this study activity covers a full spectrum including close analysis of i
 
 AT provides a concept of rising to the concrete which invites analysis of how the construct of  GDPs can be be adapted to serve the development of a game making community at different scopes of activity. To illustrate this concept we can use Marx's concept of exchange as a germ-cell for analysis of capitalism.  -->
 <!-- The previous chapter described the  key elements of the learning design that were in place by P2 ( remixing from a game template, use of distributed asset creation showcasing and social playtesting).  The shared tools and documentations began to shape goal setting around implementing new features, some where held in common with other groups. -->
+
+### MOVED FROM GUIDED PARTICIPATION
+
+<!-- Patterns and the multiple actions and operations they entail are referred to briefly using short cut names.   -->
+
+
+<!-- Discussion later or before??? Maps -
+GDP are already being used as a way to set goals, track progress and prioritise but the process seems stressful or unsatisfactory. Some kind of support help scaffold this process would be potentially productive. Changes to the emerging 3M design to provide such support are explored in the following chapter. -->
+
+
+<!--
+We can compare this drawn out process with a more rapid prioritisation guided by a parent with more experience in software development. Toby and Dave  are discussing possible features early in the process if ideation.
+
+They thinking of a feature – wrap around like Pac-man
+Dave  – Yeah we can do that. Save that for version 1.1
+-->
+
+<!-- This pattern completion is mirrored in the work of other pairs. Thus replicating is a kind of participation in an emerging community.
+There is also a link made by the parent to previous working practices. Using a paper book to make a sketch of the work to be completed. -->
+<!-- These kinds of shifts of activity and cultural practices brought by the participants also feed into the ongoing culture of the game making community. For example the use of paper designs and paper prototyping that for some of the home ed families was a familiar practice was something that I adopted more broadly after observing the families involved. -->
