Moving Mark and Ed DOL to the vignette section

--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -815,43 +815,19 @@ GDPs were used to try to organise and prioritise game making activity. An exchan
     Mark: Shall we concentrate on that and changing the platforms into something different?
 
 
-The pair's initial listing of features is a brainstorming technique aid a creative process, in this case use of the approximate names of of game design patterns (_get the person animated_, _get an enemy in_, _changing the platforms_, _make a theme tune_). The vignette analysis seed the parent overwhelmed with perhaps due to a a lack a process to map these out and then to work together to prioritise them.  He appears to be keen to quickly pick one pattern, then then work through the documentation on that pattern, a process he later refers to in interview data a plodding.
-
-    Ed: Yeah.
-    Mark: Yeah?
-    Ed: I also want to make a theme tune.
-    Mark: Yeah. It’s, that’s what I mean, you can’t just skip around like that.
-    Ed: Hmmm.
-    Mark: Just cos it gets really overwhelming.
-    Mark: Yeah..? So…?
-    Long pause.
-    Mark: Well I’ll have a look at the code and see if I can make sense of that.
-
-At a different stage Mark is engaged puzzling over documentation on how to add animation to a character for some time. This results in Ed being blocked from progressing. In the following exchange, the child proposes dividing their labour informally.
-
-    Mark: Quite complicated. But we can do it. But it would mean a lot of mucking around
-    Ed: Ah Er
-    Mark: Which is difficult to do while we’re here. But it’s doable.
-    Mark: It’s like a project in itself really.
-    Ed: Project in itself?
-    Mark: Yeah! (laughing). I just want to know like. We can get him in. So if I ask about the sizing.
-    Ed: Hmmn
-    Mark: I think you can edit the size here.
-    Ed: Why don’t you go here for a computer and you can do that?
-    Mark: Why. What. While you’re doing what?
-    Ed: Um making a sound track or something. I could do something like that.
-    Mark: Ok. Yeah. I’ll see if there’s any more computers in the cupboard.
+The pair's initial listing of features is a brainstorming technique aid a creative process, in this case use of the approximate names of of game design patterns (_get the person animated_, _get an enemy in_, _changing the platforms_, _make a theme tune_). The vignette analysis seed the parent _overwhelmed_ with the child's lack of focus on one pattern "that’s what I mean, you can’t just skip around like that".   He appears to be keen to quickly pick one pattern, then then work through the documentation on that pattern, a process he later refers to in interview data a plodding.
 
 
-The father describes previous behaviour which showed issues involving prioritisation as 'skipping around like that' or 'jumping all over the place' as 'overwhelming'.
 
-<!-- The child does not respond to this suggestion to focus on one GDP, suggests a different option. He suggests splitting and using one laptop each. He names one of the other pattern. The child continues to work on parallel patterns or component actions of pattern using tools and processes which he is more familiar with. -->
+At a different stage Mark is engaged puzzling over documentation on how to add animation to a character for some time. This results in Ed being blocked from progressing. In an exchange listed in Vignette 4, the child proposes dividing their labour informally.
+
+
 
 At this stage, the child appears to make a tactical decision allowing the father to specialise in GDPs that involve deciphering technical instructions, whilst he engages with a pattern that involves creating assets in non-code / GUI environments.
 
 The use of GDPs concepts here is used in the young person's circumvention of a tension via his informal division on labour. Specifically they are able to avoid waiting for their father and moving different parts of the overall project forward.
 
-<!-- This child also begins researching other toolsets, in this session, research to identify an online tool to create an short audio soundtrack.  -->
+
 
 
 #### Structuring work processes through implementing modular sub-projects in the form of GDPs can aid division of labour
