--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -646,13 +646,16 @@ However, to overcome scarcity of facilitator support, direct help processes were
 This section prioritises describing the code patching process using examples and guided instructions rather than the first principles.   -->
 
 
-### GDPs used to scaffold ideation processes (800)
+### GDPs used to scaffold ideation and organisation processes (800)
 
 **GDPs are used in a variety of ways to guide the ideation process via restriction of choice in pattern collection, starting template includes core dynamics, visual code structures of GDPs suit rapid prototyping.**
 
 The design chapter explored the tension between reduced choice of genre of game. In my journal notes and observations of the games created, I note that the provision of a graphical menu of GDPs significantly decreased in time spend in ideation phase by providing scaffolding and a restriction of choice. Analysis of participant use of the menu as detailed in the documentation section above Toby supports this analysis. Other techniques that leveraged the characteristics of game design patterns to support the ideation process emerged in community design activities.
 
 <!-- The reduction on the length of the course was welcome show by Ma's comment. "It did go on for too long." -->
+
+
+
 
 
 #### Knowledge of game design patterns used to stimulate and communicate new ideas
@@ -783,8 +786,6 @@ NOTE - TO DEVELOP AFTER MORE ANALYSIS OF VIDEO DATA.
 The use of GDPs to scaffold the ideation process was a common pattern used by X of the Y sessions analysed.
 
 
-
-
 ### GDPs aiding the process of organisation and division of labour (2000)
 
 <!-- NOTE - DIVISION OF LABOUR IS IN THE NEXT CHAPTER TOO - REWRITE BASED ON GDP ONLY CONTENT
@@ -814,21 +815,29 @@ GDPs were used to try to organise and prioritise game making activity. An exchan
     Mark: So you want to get your person animated that’s the main thing.
     Mark: Shall we concentrate on that and changing the platforms into something different?
 
-
 The pair's initial listing of features is a brainstorming technique aid a creative process, in this case use of the approximate names of of game design patterns (_get the person animated_, _get an enemy in_, _changing the platforms_, _make a theme tune_). The vignette analysis seed the parent _overwhelmed_ with the child's lack of focus on one pattern "that’s what I mean, you can’t just skip around like that".   He appears to be keen to quickly pick one pattern, then then work through the documentation on that pattern, a process he later refers to in interview data a plodding.
 
-
-
 At a different stage Mark is engaged puzzling over documentation on how to add animation to a character for some time. This results in Ed being blocked from progressing. In an exchange listed in Vignette 4, the child proposes dividing their labour informally.
-
-
 
 At this stage, the child appears to make a tactical decision allowing the father to specialise in GDPs that involve deciphering technical instructions, whilst he engages with a pattern that involves creating assets in non-code / GUI environments.
 
 The use of GDPs concepts here is used in the young person's circumvention of a tension via his informal division on labour. Specifically they are able to avoid waiting for their father and moving different parts of the overall project forward.
 
+<!-- #### Use of GDPs in the development of shared language to support joint work  -->
+MOVE MOST OF THIS TO APPENDIX / VIGNETTE
+
+**Language which has been introduced facilitator interventions is then modified and used organically through community interaction.**
 
 
+The following example shows a patchy but evolving use of some of the terminology that has been introduced partly by facilitator interventions and partly emerging organically through community interaction. As the community adopt the practices the become community norms.
+
+In Vignette 5.b.3, Molly, the mother wants to export an image from the graphical editing tool and to import this into the game. The mother's focus has been on creating graphics and has expressed pride in this her growing expertise in this area. She asks her daughter for help "I want the aliens to be the hazard, the rockets to be the gold coins and the spaceman to be the character." The mother shows a developing proficiency of expressing GDP related concepts and language as this interaction develops. Nadine  appears to enjoy using the language and norms of game culture to tease her mother. "Who wants a rocket for their reward?" Here the daughter recognises the GDP of reward after used by her mother but questions the aesthetic choice and its appeal to game players.
+
+In Vignette 5.b.3, the child takes on the role of guiding her mother to export graphics from Piskel gallery to the hard drive as a downloaded image file before them importing it to he code project and updating the relevant lines of code. The mother demonstrates her increased level of understanding and participation on overall process after being playfully challenged by daughter about her use of technical language. "Do you even know what export means?". Emerging laguage is used blending both technical terms like _export_ with more folk terms _getting it in the game_ rather than importing.  
+
+
+
+LINK TO THE TECHNICAL SECTION.
 
 #### Structuring work processes through implementing modular sub-projects in the form of GDPs can aid division of labour
 
@@ -850,13 +859,18 @@ The parent outlines her strategies used to address lack of reading ability as a 
 Analysis of video data uncovered flexible way in which the participant divided the process of game making. While these processes were emergent in that they were not in by the facilitator, they show traces of home collaboration practices. For example, Suzanna and Olivia alternated between use of keyboard and mouse to give the child hands on experience when possible. In interview data the parent note "I resist the urge to fix things immediately when she struggles." The parent driving seat to overcome code blockages then allowed the child to input their design choices when more complicated work is complete.
 
 
-#### Other notable observations concerning division of labour in the video data
+### Discussion on division of labour in the video data
 
-While these following observations are more generally inked to the overall design process rather than the specific note they are of value to RQ2 on developing agency.
 
-While Olivia's activity away from the screen and the main objective of coding and creating assets for their game could in a conventional educational model be seen an non-productive, in a community model of learning this can be interpreted differently. For example as legitimate peripheral activity [@lave_situating_1991], or as an observation stage of LOPI model [@rogoff_learning_2014].  The possibility for children to not engage in community activities is seen by Rogoff [-@rogoff_cultural_2003; -@rogoff_organization_2016] as an important characteristics in participation based models of learning.
+**Leveraging the possibilities of emerging divisions of labour:**  While the context of the participants as families involved in home education makes any general claims difficult, these observations support  exist in other research in this domain. For example, research shows that children have the potential to help parents as technology brokers [@correa_brokering_2015]. In joint technology work parents can fulfil several,reciprocal roles including, collaborator, resource provider, learner, non-technical consultant and emotional support [@barron_parents_2009].
 
-These examples illustrate the varied strategies to  divisions of labour that parents and children adopt. While  seem beneficial for many participants however complex tensions in activity emerge. For example  Molly and Nadine reversed traditional helping relationship, and the child would reluctantly implement the parent's requested technical elements of GDPS but would pointedly not explain the changes made, seemingly taking pride in knowing something that her mother didn't.
+Thus, in response to the creative support that parents and siblings provide, facilitators should design learning environments to facilitate these possibilities. The work of Roque provides guidance for helpers in the process to support parents to value and feel confident these roles [@roque_im_2016] in a way which mirrors the use of helpers this phase of my study.
+
+<!-- While these following observations are more generally inked to the overall design process rather than the specific note they are of value to RQ2 on developing agency. -->
+
+While these examples involve GDPs others are explore in relation to development of agency in the following chapter. The examples above illustrate, part some of the varied strategies to  divisions of labour adopted by participants at times involving  complex tensions in activity. For example  Molly and Nadine reversed traditional helping relationship, and the child would reluctantly implement the parent's requested technical elements of GDPS but would pointedly not explain the changes made, seemingly taking pride in knowing something that her mother didn't. Similarly, while Olivia's activity away from the screen  while non-productive within the scope of technical progress, can be characterised as  legitimate peripheral activity of observation of community activity [@lave_situating_1991 ; @rogoff_learning_2014].  Indeed the possibility for children to _not_ engage in community activities is seen by Rogoff [-@rogoff_cultural_2003; -@rogoff_organization_2016] as an important characteristics in participation based models of learning.
+
+
 
 <!-- NOTE - COVERT TO TABLE?
 
@@ -868,16 +882,6 @@ Molly: “Nadine !”
 Molly then makes face, wiggles head and shrugs at parent peer. The other parent laughs.
 Nadine arrives to help. -->
 
-
-    Molly: I’m trying to delete them but they turn light grey.
-    Nadine : So you want to get rid of them?
-    Molly: What are you doing? You have to tell me what you are doing so I can do it myself.
-    Molly: laughs
-    Nadine : laughs.
-    Molly: I’ll just have to keep shouting at you if you don’t tell me.
-    Molly - How did you do that so quickly? I’ve got to like, carefully... (makes hand gestures to show a sense of hesitant keyboard use)
-    Parent peer laughs
-    Nadine bounces up in place and smiles broadly.
 
 <!-- Nadine uses the mouse to select the grey background colour with the colour picker tool, then the pen tool to fill in gaps in the design. She then swaps the active colour back from grey to black by clicking the option to swap foreground and background colours.
 Molly - How did you do that so quickly? I’ve got to like, carefully... (makes hand gestures to show a sense of hesitant keyboard use)
@@ -891,17 +895,7 @@ Molly: Oh X. Alright Bubs. Thanks. -->
 
     <!-- NOTE - this is a secondary examples - where GDPs as a concept are not vital. -->
 
-Here the child has a powerful position and seems to enjoy this. In contrast the parent explains her frustration but does this light heartedly.
 
-In terms of division of labour, the interaction here is complex.
-Both the parent and child here takes great pride in the graphical work of game making. The parent shows this after being complemented by a fellow parent on graphical design saying "Thank you I'm very proud".
-
-This allows them a level of participation which is helpful without being stuck on more tricky technical or code related problems.
-
-The child also specialises in this aspect spending much time on this aspect. This interaction show her demonstrating to her mother on request proficiency in tool use, another example shows this in asset migration.
-
-
-This example shows  a practical division of labour based on the building of emerging skills and technical processes. The learning design which prioritises choice of different GDPs facilitates this. The process here illuminate the process of  building an identity as an individual or a family is. The next section develops this theme.
 
 
 Toby and Dan's pair process of accessing professional documentation also illustrated an aspect of their family learning culture. The pair's process is more guided and focused than many other participants. In several interchanges the father starts as a facilitator taking a lead from the direction of the child. As the child reaches the limits of their ability he begins to be more directive, by asking leading questions and testing existing knowledge. Finally, in order to complete the programming or research tasks beyond of the child's knowledge, the father is more direct in instruction, directing the research and proposing a coding solution for their new game design pattern.
@@ -912,21 +906,10 @@ This approach appears to be influenced by Dan's experience as a software enginee
 
 This extract from interview data indicates a priority to support the learner to develop independently but to still be very present in the support process.
 
-**Leveraging the possibilities of emerging divisions of labour:**  While the context of the participants as families involved in home education makes any general claims difficult, these observations support  exist in other research in this domain. For example, research shows that children have the potential to help parents as technology brokers [@correa_brokering_2015]. In joint technology work parents can fulfil several,reciprocal roles including, collaborator, resource provider, learner, non-technical consultant and emotional support [@barron_parents_2009].
-
-Thus, in response to the creative support that parents and siblings provide, facilitators should design learning environments to facilitate these possibilities. The work of Roque provides guidance for helpers in the process to support parents to value and feel confident these roles [@roque_im_2016] in a way which mirrors the use of helpers this phase of my study.
-
-
-
-
 
 <!-- NOTE - DIVISION OF LABOUR IS IN THE PREVIOUS CHAPTER TOO - REWRITE BASED ON GDP ONLY CONThTENT -->
 
-
 <!-- The parent cedes the keyboard and mouse and sometimes swaps chairs to allow child to play test the game created.  -->
-
-
-
 
 <!-- At one point the testing process Suzanna shows frustration as gravity value is very low making any movement very slow with little control. While the child has previously rejected increasing the value, the parent's initial acceptance of this decision is later questioned. The parent who has to do the majority of the testing is more insistent to remove a frustrating part of the testing  process.   -->
 
@@ -944,9 +927,6 @@ A SECTION HERE THAT COULD BE REPLACED.
 ADD TRANSCRIPT EXAMPLE FROM  -  2019-03-18-mi
 Molly - Oh thank you very much. I'm very proud.
  -->
-
-
-
 <!--
 NOTE - MOVE TO LATER CHAPTER AS ILLUSTRATIVE OF FLEXIBLE DESIGN?
 
@@ -1022,56 +1002,6 @@ Ed: People have used the whole block.
 Mark: Oh yeah. We’ve just cropped it. So it’s got no border around it. So you don’t set things off when you get really close to them.
 Molly: Aaaah. I see yes. Cos the corners actually could have. (makes a small square gesture with fingers)
  -->
-
-
-
-
-#### Use of GDPs in the development of shared language
-
-**Language which has been introduced facilitator interventions is then modified and used organically through community interaction.**
-
-The following example shows a patchy but evolving use of some of the terminology that has been introduced partly by facilitator interventions and partly emerging organically through community interaction. As the community adopt the practices the become community norms.
-
-As background information on this pair, the mother's focus has been on creating graphics and has expressed pride in this her growing expertise in this area.
-
-The mother wants to export an image from the graphical editing tool and to import this into the game.
-
-    Molly: Right so I don't want this rocket here. I want the rocket to be the yellow thingie.
-    Nadine – Gold coins.
-    Molly - Right so, What are you doing? Do you know what you are doing?
-    I want the aliens to be the hazard, the rockets to be the gold coins and the spaceman to be the character.
-    Molly: Poop Ping? (alarmed) What are you doing? What's poop ping.
-    Where's my spaceman?
-    Nadine : Wait! What do you want the aliens as?
-    Molly: The hazards.
-    Molly: Yaaay!
-    Molly: And now the rocket thing as the like you know the good thing - the reward.
-    Nadine : Who wants a rocket for their reward?
-    Molly: Because if a spaceman gets to a rocket he can get home. But if he doesn't then the aliens get him.
-    Nadine : It's a very violent game.
-    Molly: What?
-    Nadine : It's a very violent game.
-
-The mother develops her proficiency of expressing GDP related concepts and language as this interaction develops. This may be to show her increased level of understanding and participation on overall process after being challenged by daughter about her use of technical language. "Do you even know what export means?". Nadine also appears to enjoy using the language and norms of game culture to tease her mother. "Who wants a rocket for their reward?" Here the daughter recognises the GDP of reward after used by her mother but questions the aesthetic choice and its appeal to game players.
-
-
-<!-- While the final an operation for some participants it would be a more conscious process, for others it has become second nature. -->
-<!-- This is seen in a similar example. As a common example the process of "getting it in the game".
-
-    Molly - Nadine !, Nadine ! Nadine .
-
-    Molly: Do you know how to get it in the game?
-    Nadine : Oh my god!
-    Molly: Well . First of all save it to the gallery. How do you save it? Ah there you are. Save it. Is it saved?   Right now export it.
-    Nadine : Do you even know what export means?
-    Molly: I know what export means!
-    Nadine - Ok then smartie pants.
-
-the interaction also shows positive affect of child.
-her role in the community can be explored here. -->
-
-
-
 
 #### Code Patching as a guided process
 
